It compiles! Does it work? ... no